--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-dist/*
-build/*
-node_modules/*
+#
+# SPDX-License-Identifier: Apache-2.0
+#
+
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# Dependency directories
+node_modules/
+jspm_packages/
+package-lock.json
+
+# Compiled TypeScript files
+dist
+
