--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "fabric-contract-api": "^2.4.0",
         "fabric-shim": "^2.4.0",
         "json-stringify-deterministic": "^1.0.1",
